<resources>
    <string name="app_name">Simple Note</string>
    <string name="title_activity_note">Note Activity</string>
    <string name="set_alarm">Set alarm</string>
    <string name="about">About</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="new_note">New note</string>
    <string name="note_updated">Note updated</string>
    <string name="action_delete">Delete</string>
    <string name="note_deleted">Note deleted</string>
    <string name="edit_note">Edit note</string>
    <string name="Important">Important</string>
    <string name="note_saved">Note saved</string>
    <string name="title_activity_alarm_settings"></string>
    <string name="set_alarm_on_or_off">Turn alarm on or off</string>
    <string name="set_time_default">00:00</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_summary_1">Repeat everyday</string>
    <string name="repeat_summary_2">Repeat every 2 days</string>
    <string name="repeat_summary_3">Repeat every 3 days</string>
    <string name="repeat_summary_4">Repeat every 4 days</string>
    <string name="repeat_summary_5">Repeat every 5 days</string>
    <string name="repeat_summary_6">Repeat every 6 days</string>
    <string name="repeat_summary_7">Repeat every 7 days</string>
    <string name="alarm_set">Alarm set to</string>
    <string name="save">Save</string>
    <string name="notification_title">Simple Note alarm!</string>
    <string name="notification_text">Please check your notes</string>
    <string name="search">Search</string>
    <string name="search_hint">Search notes</string>
    <string name="title_activity_about">About</string>
    <string name="news">News</string>
    <string name="title_activity_news">News</string>
    <string name="my_news_url">http://52.78.125.129:3000</string>
    <string name="instagram_icon">Instagram icon</string>
    <string name="graphic_image_of_suho">Graphic image of suho</string>
    <string name="check_out_my_instagram">randoman1212\nCheck out my Instagram!</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="about_text">This app has no ads. However it will inform you about my new games when it comes out. The games will come out few times a year at max.Thank you for using my app.</string>
    <string name="yi_su_ho_ncau_cse_14">Yi Su Ho\nCAU CSE 14</string>
    <string name="title_activity_app_widget_configure">Select note</string>
    <string name="export">Export</string>
    <string name="import_option">Import</string>
    <string name="noTags">No Tags</string>
    <string name="all">All</string>
    <string name="editor_hint">What\'s on your mind?</string>
    <string name="title_activity_export">Export</string>
    <string name="export_successful">Export successful\n/SimpleNote/SimpleNote.json</string>
    <string name="export_failed">Export failed</string>
    <string name="no_permission">No permission</string>
    <string name="export_file_name">SimpleNote.json</string>
    <string name="choose_file">Choose file</string>
    <string name="please_install_a_file_browser">Please install a File Browser.</string>
    <string name="import_successful">Import successful</string>
    <string name="import_failed">Import failed</string>
    <string name="hashtags_pattern">(?:^|\\s|[\\p{Punct}&amp;&amp;[^/]])(#[\\p{L}0-9-_]+)</string>
    <string name="utf_8">UTF-8</string>
    <string name="failed_to_create_directory">Failed to create directory /SimpleNote</string>
    <string name="help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="export_instruction">Your notes will be exported to /SimpleNote directory in your device via JSON file (SimpleNote.json). This file can be imported later to restore notes. To restore notes, place the file in the /SimpleNote directory.\n\nJSON file is just a formatted text file. So You can open the file with any text reader and copy the content if needed. However, changing the content may corrupt the file and later result in an import failure. So, Please be cautious.</string>
    <string name="help_add_hashtag">Just add # to your notes</string>
    <string name="help_export_import"><![CDATA[Export & Import]]></string>
    <string name="help_you_can_now_also_export_import"><![CDATA[You can now also export & import notes!]]></string>
    <string name="help_using_simple_json">Using simple JSON</string>
    <string name="help_tags">Tags</string>
    <string name="help_you_can_now_organize_your_notes_using_tags">You can now organize your notes using tags!</string>
    <string name="export_dir_name">SimpleNote</string>
    <string name="no_file_to_import">No file to import in /SimpleNote</string>
    <string name="help_all_set">All set</string>
    <string name="help_press_the_back_button">Press the back button to start taking notes!</string>
</resources>
